Creating line animations on the square (CSS)
Adding stroke-dasharray and stroke-dashoffset to modify the square.
Adding CSS Animations

--- a/2-animate-a-logo/main.css
+++ b/2-animate-a-logo/main.css
@@ -6,3 +6,18 @@ svg {
   left: 0;
   margin: auto;
 }
+
+.square {
+  stroke-dasharray: 600;
+  stroke-dashoffset: -600;
+  animation: draw-square 2s infinite;
+}
+
+@keyframes draw-square {
+  from {
+    stroke-dashoffset: -650;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
