--- a/2-animate-a-logo/main.css
+++ b/2-animate-a-logo/main.css
@@ -11,13 +11,34 @@ svg {
   stroke-dasharray: 600;
   stroke-dashoffset: -600;
   animation: draw-square 2s infinite;
+  transform-origin: 50% 50%;
 }
 
 @keyframes draw-square {
   from {
     stroke-dashoffset: -650;
+    transform: rotate(0deg);
   }
   to {
     stroke-dashoffset: 0;
+    transform: rotate(720deg);
+  }
+}
+
+.hexagon {
+  stroke-dasharray: 400;
+  stroke-dashoffset: -400;
+  animation: draw-hexagon 2s infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes draw-hexagon {
+  from {
+    stroke-dashoffset: -400;
+    transform: rotate(0deg);
+  }
+  to {
+    stroke-dashoffset: 0;
+    transform: rotate(360deg);
   }
 }
