--- a/3-animation-properties/main.css
+++ b/3-animation-properties/main.css
@@ -10,4 +10,16 @@ svg {
 .monkey {
   stroke: green;
   stroke-width: 2px;
+  stroke-dashoffset: -2000;
+  stroke-dasharray: 2000;
+  animation: monkey 2s;
+}
+
+@keyframes monkey {
+  from {
+    stroke-dashoffset: -2000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
