--- a/3-animation-properties/main.css
+++ b/3-animation-properties/main.css
@@ -12,7 +12,12 @@ svg {
   stroke-width: 2px;
   stroke-dashoffset: -2000;
   stroke-dasharray: 2000;
-  animation: monkey 2s;
+  animation-name: monkey;
+  animation-duration: 5s;
+  animation-iteration-count: 2;
+  animation-direction: normal;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
 }
 
 @keyframes monkey {
