--- a/3-animation-properties/main.css
+++ b/3-animation-properties/main.css
@@ -14,17 +14,21 @@ svg {
   stroke-dasharray: 2000;
   animation-name: monkey;
   animation-duration: 5s;
-  animation-iteration-count: 2;
-  animation-direction: normal;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
   animation-timing-function: ease-in;
   animation-fill-mode: forwards;
 }
 
 @keyframes monkey {
-  from {
+  0% {
     stroke-dashoffset: -2000;
   }
-  to {
+  50% {
+    stroke: red;
+  }
+  100% {
     stroke-dashoffset: 0;
+    stroke: purple;
   }
 }
