--- a/5-hand-drawn-text-animation/main.css
+++ b/5-hand-drawn-text-animation/main.css
@@ -6,3 +6,17 @@ svg {
   bottom: 0px;
   position: absolute;  
 }
+
+path {
+  stroke-dasharray: 1070.9;
+  animation: draw 3s reverse;
+}
+
+@keyframes draw {
+  from {
+    stroke-dashoffset: 0;
+  } 
+  to {
+    stroke-dashoffset: 1070.9;
+  }
+}
